--- a/draw.css
+++ b/draw.css
@@ -1,10 +1,9 @@
 *{
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 body{
     width: 100%;
     height: 100vh;
@@ -12,14 +11,16 @@ body{
 
 #container{
     position: relative;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
 }
 
 canvas{
     width: 100%;
-    height: 100%;
-    background-color: #000;
+    height: 100vh;
+    background-color: black;
 }
-
 .options{
     position: absolute;
     bottom: 0;
@@ -34,36 +35,31 @@ canvas{
     left: 50%;
     transform: translateX(-50%);
     opacity: .4;
-
 }
 
 .options:hover{
-    opacity:1;
+    opacity: 1;
 }
 
 button{
+    /* width: 80px; */
     border: none;
     display: flex;
     padding: .6rem 1rem;
-    color: #fff;
-    background-color: #999;
+    color: white;
+    background: #999;
+    cursor: pointer;
 
 }
-
 input{
     flex: 1;
 }
 
 button#draw.active{
-    background-color: skyblue;
+     background: skyblue;
 }
 
 button#erase.active{
-    background-color: red;
+     background:red;
+
 }
-
-
-
-
-
-
